tp-roomlist: ensure that we stay alive during the create_and_handle_channel async call

https://bugzilla.gnome.org/show_bug.cgi?id=658909